# 100_DAYS_OF_CODE

./: .gitignore  Day_1_14.py  Day_1_16.py  Day_2_23.py  Day_2_25.py  Day_3_1_odd_or_even.py  Day_3_2_BMI.py  Day_3_3_leap_year.py  Day_4.py  Day_4_7_rock_paper_scissors.py  Day_5_3_range_loop.py  Days_4_4_who_will_pay_the_bill.py  README.md  pyproject.toml
Day 5 /: Day_5_2.py  Day_5_6_password_gen.py
Day_10_Functions_with_outputs/: Calculator.py  Days_in_month.py  Lesson_1_common_thigs.py
Day_11_The_blackjack_capstone_project/: Black_Jack_Game.py  The_blackjack_game.py
Day_12_Scope_and_numbers_Guessing_game/: Nameplaces_Local_vs_Global_scope.py  guess_the_number_game.py  logo.py
Day_13_debbaging/: Debbaging.py
Day_14_Higher_and_Lower/: Higher_and_lower_game.py
Day_15_ENV_setup_and_The_Coffee_Machine/: Coffee_Machine.py  Coffee_Machine_her_decission.py
Day_16_OOP/: Constructing_Objects_and_Accessing_their_Attributes_and_Methods.py  main.py  money_machine.py
Day_17_The_Quiz_Project_&_the_Benefits_of_OOP/: data.py  main.py  quiz_brain.py
Day_18_Turtle_&_the_Graphical_User_Interface_(GUI)/: Draw_a_spirograph.py  hirst_paintong_project.py  main.py
Day_19_Instances_State_and_Higher_Order_Functions/: Eatch_A_Sketch_APP.py  Turtle_Race_Project.py  main.py
Day_2/: Day_2_26.py
Day_20_Build_snake_Game_Part_1/: main.py  snake.py
Day_20_and_21_Build_snake_Game_Part/: food.py  scoreboard.py  snake.py
Day_22_Build_Pong_The_Famous_Arcade_Game/: main.py  paddle.py  scoreboard.py
Day_23_The_Turtle_Crossing_Capstone_Project/: car_manager.py  main.py  player.py
(+70 files in other folders)
