[tool.poetry]
name = "100-days-of-code"
version = "0.1.0"
description = ""
authors = ["AlexanderLevkin <alexanlevkin@gmail.com>"]
readme = "README.md"
packages = [{include = "100_days_of_code"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
